--- a/frontend/src/app/auth/enregistrer/enregistrer.component.scss
+++ b/frontend/src/app/auth/enregistrer/enregistrer.component.scss
@@ -27,6 +27,12 @@
     font-style: italic;
   }
 
+  .success-message{
+    margin-top: 1em;
+    color: #267c09;
+    font-weight: bolder;
+  }
+
   .footer .menu {
     display: flex;
     justify-content: center;
