corriger le back

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<app-entete-auth></app-entete-auth>
+<app-entete-auth class="entete"></app-entete-auth>
 
 <router-outlet class="main" style="padding-bottom: 500px;"></router-outlet>
 
