--- a/frontend/src/app/bouteille/ajout-bouteille-non-lister/ajout-bouteille-non-lister.component.html
+++ b/frontend/src/app/bouteille/ajout-bouteille-non-lister/ajout-bouteille-non-lister.component.html
@@ -65,7 +65,7 @@
       <input matInput type="text" formControlName="note">
     </mat-form-field>
 
-    <div class="button">
+    <div class="button padding50">
       <button type="submit">Ajouter</button>
     </div>
   </form>
