--- a/frontend/src/app/bouteille/ajouter-bouteille/ajouter-bouteille.component.html
+++ b/frontend/src/app/bouteille/ajouter-bouteille/ajouter-bouteille.component.html
@@ -1,5 +1,5 @@
 
-<div class="body">
+<div class="body ">
   <div class="title">
     <!--<p>{{ bouteille.bouteille?.nom }}</p>-->
 
@@ -70,8 +70,8 @@
       <input matInput type="text" formControlName="note">
     </mat-form-field>
 
-    <div class="button">
-      <button type="submit">Ajouter</button>
+    <div class="button padding50">
+      <button type="submit ">Ajouter</button>
     </div>
   </form>
 </div>
