--- a/frontend/src/app/bouteille/liste-bouteille/liste-bouteille.component.html
+++ b/frontend/src/app/bouteille/liste-bouteille/liste-bouteille.component.html
@@ -7,7 +7,7 @@
   </div> -->
   <div class="search-box">
     <i class="bx bx-search-alt"></i>
-    <input type="text" [(ngModel)]="searchTerm" name="search" id="search" placeholder="Rechercher" (input)="filterBouteilles()" />
+    <input type="text" [(ngModel)]="searchTerm" name="search" id="search" placeholder="Vin rouge" (input)="filterBouteilles()" />
   </div>
   <div class="title">
     <!-- <button mat-button [routerLink]="['/cellier/' + cellier_id + '/bouteille/' + bouteille_id +'/edit']" routerLinkActive="actif"><mat-icon>edit</mat-icon>Modifier</button> -->
