--- a/frontend/src/app/cellier/liste-cellier/liste-cellier.component.scss
+++ b/frontend/src/app/cellier/liste-cellier/liste-cellier.component.scss
@@ -59,7 +59,7 @@
     justify-content: space-between;
     gap: 1rem;
     overflow: auto;
-    height: 60vh;
+    //height: 60vh;
     grid-template-columns: repeat(2, 1fr);
     align-items: baseline;
     padding-bottom: 50px;
