--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -86,7 +86,8 @@ body {
 
 .body {
   min-height: 70vh;
-  padding: 20% 9% 4rem;
+  padding: 5% 9% 4rem;
+  //padding-bottom: 500px;
   justify-content: space-between;
 }
 
