--- a/frontend/src/app/bouteille/ajouter-bouteille/ajouter-bouteille.component.scss
+++ b/frontend/src/app/bouteille/ajouter-bouteille/ajouter-bouteille.component.scss
@@ -56,7 +56,7 @@
 form {
   margin-top: 5%;
   overflow: auto;
-  height: 58vh;
+  //height: 58vh;
 }
 
 form mat-form-field {
@@ -74,4 +74,7 @@ div.button button {
   font-size: 1.3rem;
   border-radius: 6rem;
   box-shadow: 2px 1rem 1rem rgb(4 4 4 / 25%);
+}
+button{
+  margin-bottom: 50px;
 }
