--- a/frontend/src/app/bouteille/liste-bouteille/liste-bouteille.component.scss
+++ b/frontend/src/app/bouteille/liste-bouteille/liste-bouteille.component.scss
@@ -62,7 +62,7 @@
   justify-content: space-between;
   gap: 1rem;
   overflow: auto;
-  height: 60vh;
+  //height: 60vh;
   grid-template-columns: repeat(2, 1fr);
   align-items: baseline;
 }
