--- a/frontend/src/app/listeAchat/ajout-bouteille/ajout-bouteille.component.scss
+++ b/frontend/src/app/listeAchat/ajout-bouteille/ajout-bouteille.component.scss
@@ -56,7 +56,7 @@
   form {
     margin-top: 5%;
     overflow: auto;
-    height: 58vh;
+    //height: 58vh;
   }
   
   form mat-form-field {
@@ -76,3 +76,6 @@
     box-shadow: 2px 1rem 1rem rgb(4 4 4 / 25%);
   }
   
+  button{
+    margin-bottom: 50px;
+  }
