--- a/frontend/src/app/listeAchat/liste-achat/liste-achat.component.scss
+++ b/frontend/src/app/listeAchat/liste-achat/liste-achat.component.scss
@@ -61,9 +61,10 @@
     justify-content: space-between;
     gap: 1rem;
     overflow: auto;
-    height: 60vh;
+    //height: 60vh;
     grid-template-columns: repeat(2, 1fr);
     align-items: baseline;
+    margin-bottom: 500px;
   }
   
   .card .empty-cellier {
