--- a/frontend/src/app/layout/accueil/accueil.component.html
+++ b/frontend/src/app/layout/accueil/accueil.component.html
@@ -1,6 +1,6 @@
   <div class="container">
   <div class="logo-container">
-    <a href="accueil"><img src="assets/vino-logo-black.svg" alt="Vino logo"></a>
+    <a routerLink="/"><img src="assets/vino-logo-black.svg" alt="Vino logo"></a>
   </div>
 
   <div class="description-note">
