--- a/frontend/src/app/admin-statistique/admin-statistique.component.html
+++ b/frontend/src/app/admin-statistique/admin-statistique.component.html
@@ -1,7 +1,14 @@
 <div>
     <div style="width:300px;height: 300px;">
-        <h2>la Charte</h2>
+        <h2>La charte nombre de Cellier pour chaque utilisateur</h2>
         <canvas id="myChart"></canvas>
+
+    </div>
+</div>
+<div>
+    <div style="width:300px;height: 300px;">
+        <h2>La charte nombre de Bouteilles pour chaque utilisateur</h2>
+        <canvas id="myChart2"></canvas>
 
     </div>
 </div>
