--- a/frontend/src/app/layout/footer-auth/footer-auth.component.html
+++ b/frontend/src/app/layout/footer-auth/footer-auth.component.html
@@ -4,7 +4,7 @@
     <a [matMenuTriggerFor]="menu" routerLinkActive="active"><mat-icon>menu</mat-icon></a>
     <mat-menu #menu="matMenu">
       <button mat-menu-item routerLink="/a-propos" routerLinkActive="active"><mat-icon>info</mat-icon>À Propos</button>
-      <button mat-menu-item><mat-icon>flag</mat-icon>Signaler une erreur</button>
+      <button mat-menu-item routerLink="/signaler"><mat-icon>flag</mat-icon>Signaler une erreur</button>
     </mat-menu>
     
     <a routerLink="/cellier" routerLinkActive="active"
@@ -14,7 +14,9 @@
     <mat-menu #profile="matMenu">
       <button mat-menu-item><mat-icon>person</mat-icon>Nom: <strong> {{ nom }}</strong></button>
       <button mat-menu-item *ngIf="profil != '2' " (click)="importationSaq()"><mat-icon>sync</mat-icon>Importation SAQ</button>
-      <button mat-menu-item *ngIf="profil != '2' " routerLink="/statistique"><mat-icon>equalizer</mat-icon>Satistique</button>
+      <button mat-menu-item *ngIf="profil != '2' " routerLink="/statistique"><mat-icon>equalizer</mat-icon>Statistique</button>
+      
+      <button mat-menu-item *ngIf="profil != '2' " routerLink="/table-signaler"><mat-icon>flag</mat-icon>Liste des erreurs</button>
       <button mat-menu-item (click)="deconnexion()"><mat-icon>logout</mat-icon>Déconnexion</button>
     </mat-menu>
 
