--- a/frontend/src/app/admin-statistique/admin-statistique.component.html
+++ b/frontend/src/app/admin-statistique/admin-statistique.component.html
@@ -1,12 +1,13 @@
-<div>
+<div class="container">
     <div style="width:300px;height: 300px;">
         <h2>La charte nombre de Cellier pour chaque utilisateur</h2>
         <canvas id="myChart1"></canvas>
     </div>
-</div>
-<div>
+
+
     <div style="width:300px;height: 300px;">
         <h2>La charte nombre de Bouteilles pour chaque utilisateur</h2>
         <canvas id="myChart2"></canvas>
     </div>
 </div>
+    
