--- a/frontend/src/app/listeAchat/liste-achat/liste-achat.component.html
+++ b/frontend/src/app/listeAchat/liste-achat/liste-achat.component.html
@@ -7,6 +7,7 @@
     <div class="title">
      <!--<p>{{ bouteille.bouteille?.nom }}</p>-->
       <a [routerLink]="['ajouter']" ><span>Ajouter une bouteille</span><mat-icon>add_circle</mat-icon></a>
+      <a (click)="viderListeAchat()" ><span>Vider la liste</span><mat-icon>delete_forever</mat-icon></a>
     </div>
   
     <div class="card">
