--- a/frontend/src/app/bouteille/afficher-bouteille/afficher-bouteille.component.scss
+++ b/frontend/src/app/bouteille/afficher-bouteille/afficher-bouteille.component.scss
@@ -4,6 +4,10 @@
     justify-content: space-between;
     padding: 20px;
   }
+  .partage{
+    display: flex;
+    justify-content: space-between;
+  }
 
   .page {
     padding-bottom: 100px;
