--- a/frontend/src/app/signaler-erreur/signaler-erreur.component.scss
+++ b/frontend/src/app/signaler-erreur/signaler-erreur.component.scss
@@ -1,19 +1,38 @@
 .container {
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 20%;
-    
-  }
-  .title {
-    padding: 15PX;
-    margin-top: 5%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 20%;
+  
+}
+.title {
+  padding: 15PX;
+  margin-top: 5%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-  .title p {
-    font-weight: bolder;
-  }
+.title p {
+  font-weight: bolder;
+}
+
+
+
+h2 {
+  text-align: center;
+}
+
+mat-form-field {
+  width: 100%;
+}
+
+.btn {
+  text-align: center;
+}
+
+.body {
+  padding: 8% 8% 5rem;
+}
+
